make compatible with java8